==================== 2.22.0 ====================

==================== 2.21.92 ====================

2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * panel-menu-items.c:
        * panel-util.c:
	g_uri_get_scheme -> g_uri_parse_scheme

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* launcher.c (panel_launcher_delete):
	Use g_file_has_prefix instead of renamed
	g_file_contains_file.

2008-02-21  Vincent Untz  <vuntz@gnome.org>

	Make drawer work again. Fix bug #517191.

	* panel-toplevel.c: (panel_toplevel_initially_hide):
	explicitly do everything for the initial hide here. And don't hide for
	drawers.
	(panel_toplevel_realize): initially hide here
	(panel_toplevel_init): don't initially hide here

2008-02-20  Vincent Untz  <vuntz@gnome.org>

	* gnome-desktop-item-edit.c: (main): make creating .desktop files with
	--create-new work again. Also fix a leak.
	Fix bug #517617

2008-02-13  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_place_menu_item_append_gtk_bookmarks):
	* panel-recent.c: (show_uri):
	Add FIXME for really minor things to handle in the future...

2008-02-12  Vincent Untz  <vuntz@gnome.org>

	Use the customized CD icons when there's one.
	Fix bug #516032

	* menu.[ch]: make IconToLoad handle GIcon
	(icon_to_load_free): updated
	(icon_to_load_copy): ditto
	(load_icons_handler): load from GIcon when there's one
	(create_submenu_entry): updated for panel_load_menu_image_deferred()
	change
	(create_menuitem): ditto
	(setup_menu_item_with_icon): take a GIcon parameter
	(panel_load_menu_image_deferred): ditto, and use it
	* panel-menu-items.c: (panel_menu_items_append_from_desktop): updated
	for setup_menu_item_with_icon() change
	(panel_menu_items_append_place_item): add a GIcon parameter and use it
	(panel_menu_items_create_action_item_full): updated
	for setup_menu_item_with_icon() change
	(panel_place_menu_item_append_gtk_bookmarks): updated
	for setup_menu_item_with_icon() change