@@ -1,3 +1,8 @@
+2008-03-18  Frederic Crozat  <fcrozat@mandriva.com>
+
+	* panel-logout.c: convert username / login
+	to UTF-8 if current locale is not UTF-8.
+
 ==================== 2.22.0 ====================
 
 ==================== 2.21.92 ====================
